 * New --output option to allow run-time options to be defined via a file.
 * --co, --cvs, and --sort options to specify the paths to executables.

 Bugs fixed:
 * Fix issue #86: Support multiple project roots per repository.
 * Fix issue #104: Allow path to "sort" executable to be specified.
 * Fix issue #8: Allow multiple --encoding options.

 Improvements and output changes:
 * Further reduce conversion time and temporary space requirements.

 Miscellaneous:
 * Deprecate the --dump-only option (it is now implied by --dumpfile).
 * Add scripts to help isolate conversion problems and shrink test cases.
 * Add a script to search for illegal filenames in a CVS repository.


Version 1.4.0 (27 August 2006)
------------------------------

 New features:
 * Support multicomponent --trunk, --tags, and --branches paths (issue #7).
 * New --auto-props option allows file properties to be set via file.
 * --force-branch and --force-tag options now accept regular expressions.
 * Add --symbol-default option.
 * Support multiple, ordered --encoding options.

 Bugs fixed:
 * Fix issue #93: Tags with forbidden characters converted to branches.
 * Fix issue #102: Branch file, deleted in CVS, is present in SVN.

 Improvements and output changes:
 * Print informative warning message if a required program is missing.
 * Output an error if any CVS filenames contain control characters.
 * Clean up temporary files even for pass-by-pass conversions.
 * Improve handling of commit dependencies and multibranch commits.
 * Implemented issue #50 (performance change).
 * Reduced the amount of temporary disk space needed during the conversion.

 Miscellaneous:
 * cvs2svn now requires Python version 2.2 or later.
 * cvs2svn has been broken up into many smaller python modules for clarity.


Version 1.3.1 (24 May 2006)
---------------------------

 Bugs fixed:
 * Fix issue #67: malfunction caused by RCS branches rooted at revision 1.0.


Version 1.3.0 (18 August 2005)