@@ -114,20 +114,20 @@ def format_date(date):
   return time.strftime("%Y-%m-%dT%H:%M:%S.000000Z", time.gmtime(date))
 
 
-def to_utf8(value, fallback_mode='replace'):
+def to_utf8(value, strict=False):
   """Encode (as Unicode) VALUE, trying the encodings in Ctx().encoding
   as valid source encodings.  If all of the encodings fail, then
-  encode using the first encoding with FALLBACK_MODE (unless
-  FALLBACK_MODE=='strict', in which case raise a UnicodeError)."""
+  encode using Ctx().fallback_encoding if it is configured (unless
+  STRICT is True, in which case raise a UnicodeError)."""
 
   for encoding in Ctx().encoding:
     try:
       return unicode(value, encoding).encode('utf8')
     except ValueError:
       Log().verbose("Encoding %r failed for string %r" % (encoding, value))
-  ### FIXME: The last fallback method should be controled by option.
-  if (fallback_mode != 'strict'):
-    return unicode(value, Ctx().encoding[0], fallback_mode).encode('utf8')
+
+  if not strict and Ctx().fallback_encoding is not None:
+    return unicode(value, Ctx().fallback_encoding, 'replace').encode('utf8')
   else:
     raise UnicodeError
 
